[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Opponent.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Ball.tscn" type="PackedScene" id=3]
[ext_resource path="res://Level.gd" type="Script" id=4]
[ext_resource path="res://Assets/digitalix.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Assets/ping_pong_8bit_beeep.ogg" type="AudioStream" id=6]
[ext_resource path="res://Assets/mid_field.png" type="Texture" id=7]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 640, 10 )

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
size = 32
outline_color = Color( 0.952941, 0.313726, 0.160784, 1 )
font_data = ExtResource( 5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 360 )

[node name="Level" type="Node"]
script = ExtResource( 4 )
__meta__ = {
"_edit_horizontal_guides_": [ 359.677 ],
"_edit_vertical_guides_": [ 640.271 ]
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0784314, 0.129412, 0.14902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Walls" type="StaticBody2D" parent="."]

[node name="UpWall" type="CollisionShape2D" parent="Walls"]
position = Vector2( 640, -10 )
shape = SubResource( 4 )

[node name="DownWall" type="CollisionShape2D" parent="Walls"]
position = Vector2( 640, 730 )
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="Walls"]
position = Vector2( 640, 360 )
scale = Vector2( 1.15, 1.15 )
texture = ExtResource( 7 )

[node name="PlayerScore" type="Label" parent="."]
anchor_left = 0.344
anchor_top = 0.028
anchor_right = 0.5
anchor_bottom = 0.222
margin_left = -0.319977
margin_top = -0.16
margin_bottom = 0.159988
custom_fonts/font = SubResource( 1 )
text = "0
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpponentScore" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.656
anchor_bottom = 0.194
margin_top = 20.0
margin_right = 0.319946
margin_bottom = 20.32
custom_fonts/font = SubResource( 2 )
text = "0
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CountDown" type="Label" parent="."]
anchor_left = 0.483
anchor_top = 0.389
anchor_right = 0.516
anchor_bottom = 0.444
margin_left = 1.76001
margin_top = -0.0800171
margin_right = -0.480042
margin_bottom = 0.319977
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.952941, 0.313726, 0.160784, 1 )
text = "3"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="Area2D" parent="."]
position = Vector2( -11, 360 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left"]
shape = SubResource( 3 )

[node name="Right" type="Area2D" parent="."]
position = Vector2( 1291, 360 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right"]
shape = SubResource( 3 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 50, 360 )

[node name="Opponent" parent="." instance=ExtResource( 2 )]
position = Vector2( 1230, 360 )

[node name="Ball" parent="." instance=ExtResource( 3 )]
position = Vector2( 640, 360 )

[node name="CountdownTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="ScoreSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
[connection signal="body_entered" from="Left" to="." method="_on_Left_body_entered"]
[connection signal="body_entered" from="Right" to="." method="_on_Right_body_entered"]
[connection signal="timeout" from="CountdownTimer" to="." method="_on_CountdownTimer_timeout"]
